--- a/galletas.html
+++ b/galletas.html
@@ -1,12 +1,22 @@
-<html>
-    <head>
-        <title>El titulo del post</title>
-        <link rel="stylesheet" href="./Estilos css/Style.css"
-
-    </head>
-    <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
-
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todas las galletas</title>
+    <link rel="stylesheet" href="./Estilos css/Style.css">
+</head>
+<body>
+    <header class="page-header">
+        <nav>
+            <ul class="nav">
+                <li class="main-nav__item">Chocolate</li>
+                <li class="main-nav__item">Avena</li>
+                <li class="main-nav__item">Con chips</li>
+                <li class="main-nav__item">mani</li>
+            </ul>
+        </nav>
+    </header>
+</body>
 </html>
