--- a/galletas.html
+++ b/galletas.html
@@ -18,5 +18,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <figure>
+                <img src="./Estilos css/Imagenes/navidad.jpg" alt="Galletita">
+                <figcaption>Galleta navideña</figcaption>
+            </figure>
+        </section>
+
+    </main>
 </body>
 </html>
