detalles a la imagen

--- a/galletas.html
+++ b/galletas.html
@@ -20,9 +20,9 @@
     </header>
     <main>
         <section>
-            <figure>
+            <figure class="imagen1">
                 <img src="./Estilos css/Imagenes/navidad.jpg" alt="Galletita">
-                <figcaption>Galleta navideña</figcaption>
+                <figcaption class="decoracion">Galleta navideña</figcaption>
             </figure>
         </section>
 
