modifique las galletas de mani y el color de la imagen

--- a/galletas.html
+++ b/galletas.html
@@ -14,7 +14,7 @@
                 <li class="main-nav__item">Chocolate</li>
                 <li class="main-nav__item">Avena</li>
                 <li class="main-nav__item">Con chips</li>
-                <li class="main-nav__item">mani</li>
+                <li class="main-nav__item">mani y nueces</li>
             </ul>
         </nav>
     </header>
