--- a/galletas.html
+++ b/galletas.html
@@ -15,6 +15,7 @@
                 <li class="main-nav__item">Avena</li>
                 <li class="main-nav__item">Con chips</li>
                 <li class="main-nav__item">mani con pasas</li>
+                <li class="main-nav__item">solo mani</li>
             </ul>
         </nav>
     </header>
